# music-player

./: README
src/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  music_player  style.cpp  style.h
